--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 **/Debug/**
 **/obj/**
 **\obj\**
+**/bin/**
 **/~*
 **/node_modules/**
 /3 курс 6 семестр/Интернет технологии/ЛР 2/LR2_Server/nbproject/private/
