--- a/DiplomBackApi/DiplomBackApi/appsettings.json
+++ b/DiplomBackApi/DiplomBackApi/appsettings.json
@@ -1,10 +1,40 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionString": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres;IncludeErrorDetail=true;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "System": "Debug",
+        "Microsoft": "Debug",
+        "Microsoft.EntityFrameworkCore": "Information",
+        "Orleans": "Debug"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-development.txt",
+          "fileSizeLimitBytes": 10000000,
+          "rollOnFileSizeLimit": true,
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 10,
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{Address}] (Td={ThreadId}) {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId" ]
+  },
   "PathToSaveDB": "/DbDump"
 }
