--- a/client/build.env
+++ b/client/build.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://dimonogen.ru:5000/api
-REACT_APP_STATIC_URL=http://dimonogen.ru:5000/
+REACT_APP_API_URL=http://90.156.210.130:5001/api
+REACT_APP_STATIC_URL=http://90.156.210.130:5001/
