fix critical доступ к объектам других пользователей, изменения в интерфейсе

--- a/client/build.env
+++ b/client/build.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://90.156.210.130:5001/api
-REACT_APP_STATIC_URL=http://90.156.210.130:5001/
+REACT_APP_API_URL=http://litbase.ru:5001/api
+REACT_APP_STATIC_URL=http://litbase.ru:5001/
