Мелкие правки и начала переработки иконок

--- a/client/build.env
+++ b/client/build.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://litbase.ru:5001/api
-REACT_APP_STATIC_URL=http://litbase.ru:5001/
+REACT_APP_API_URL=https://litbase.ru:5001/api
+REACT_APP_STATIC_URL=https://litbase.ru:5001/
