--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /4 курс 7 семестр/Системное ПО/SPO_LR5_Java/build/
 /4 курс 8 семестр/Конструирование компиляторов/LR1/LR1_Form/obj
 /4 курс 8 семестр/Конструирование компиляторов/LR1/LR1/obj
+/DiplomBackApi/DiplomBackApi/logs
